# rag-for-mojo

./: .gitignore  MODAL_DEPLOYMENT.md  README.md  modal_app.py  requirements-modal.txt  upload_faiss_to_modal.py
app/: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  start.sh
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
notebook/: README.md  pyproject.toml  酒吧RAG品牌大使.ipynb
