[project]
name = "mojo-rag-app"
version = "1.0.0"
description = "夢酒館 RAG 品牌大使 - Flask Web 應用程式"
requires-python = ">=3.10,<3.14"
dependencies = [
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.12.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.5.0",
]
