[project]
name = "mojo-rag-research"
version = "0.1.0"
description = "夢酒館 RAG 品牌大使 - Jupyter Notebook 研究版本"
requires-python = ">=3.10,<3.14"
dependencies = [
    "faiss-cpu>=1.8.0",
    "gradio>=5.38.0",
    "ipykernel>=6.30.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.5.0",
    "tqdm>=4.67.0",
    "jupyter>=1.1.0",
    "notebook>=7.4.0",
]
